--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "IvanVit",
   "license": "ISC",
   "dependencies": {
-    "jasmine": "^2.3.1",
-    "lodash": "^3.10.0",
-    "protractor": "^2.1.0"
+    "cheerio": "^0.19.0",
+    "lodash": "^3.10.0"
   }
 }
