--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.19.0",
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.0",
+    "request": "^2.60.0"
   }
 }
